--- a/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
@@ -533,20 +533,26 @@
                                                                 if (htmeal != null && htmeal.ContainsKey(hashdata))
                                                                 {
 
-                                                                    var Mealname = htmeal[hashdata].ToString();
-                                                                    var meal = MealImageList.GetAllmeal().Where(x => Mealname.Contains(x.MealCode)).ToList();
-                                                                    if (meal != null)
+                                                                    var Mealcode = htmeal[hashdata].ToString();
+                                                                    var MealName = MealImageList.GetAllmeal()
+                                                                    .Where(x => Mealcode.Contains(x.MealCode))
+                                                                    .Select(x => x.MealImage)
+                                                                    .FirstOrDefault();
+                                                                    if (Mealcode != null)
                                                                     {
-                                                                        foreach (var item in meal)
-                                                                        {
-                                                                            <td>@item.MealCode</td>
-                                                                        }
+
+                                                                        <td>@Mealcode-@MealName</td>
+                                                                      
                                                                     }
-                                                                    // <td>@htmeal[hashdata]</td>
+
+                                                                  
+
+
+
                                                                 }
                                                                 else
                                                                 {
-                                                                    <td></td>
+                                                                    <td>NA</td>
                                                                 }
                                                                 // string hashBagdata = @Model.AirlinePNR[0].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.destination;
                                                                 // if (htbag != null)
@@ -569,14 +575,14 @@
                                                                             }
                                                                             else
                                                                             {
-                                                                                <td></td>
+                                                                                <td>NA</td>
                                                                             }
                                                                         }
                                                                     }
                                                                 }
                                                                 else
                                                                 {
-                                                                    <td></td>
+                                                                    <td>NA</td>
                                                                 }
 
                                                             }
@@ -953,7 +959,6 @@
                                                     <th rowspan="2" class="align-middle">Passenger</th>
                                                     <th colspan="2" class="text-center">Fllight Detail</th>
                                                     <th rowspan="2" class="align-middle">Meal Type</th>
-
                                                     <th rowspan="2" class="align-middle">Extra Bag(KD)</th>
                                                     <th rowspan="2" class="align-middle">Insurance Status</th>
 
@@ -990,49 +995,69 @@
                                                             <td>@Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin - @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination </td>
                                                             <td>@Model.AirlinePNR[a].journeys[0].segments[i3].identifier.carrierCode - @Model.AirlinePNR[a].journeys[0].segments[i3].identifier.identifier</td>
                                                             @{
-                                                                string hashdata = @Model.AirlinePNR[a].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
 
-                                                                if (htmeal != null && htmeal.ContainsKey(hashdata))
+
+                                                               string hashdataMeal = @Model.AirlinePNR[0].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.destination;
+
+                                                                if (hashdataMeal != null && htmeal.ContainsKey(hashdataMeal))
                                                                 {
 
-                                                                    var Mealname = htmeal[hashdata].ToString();
-                                                                    var meal = MealImageList.GetAllmeal().Where(x => Mealname.Contains(x.MealCode)).ToList();
-                                                                    if (meal != null)
+                                                                    var Mealcode = htmeal[hashdataMeal].ToString();
+
+                                                                    var MealName = MealImageList.GetAllmeal()
+                                                                    .Where(x => Mealcode.Contains(x.MealCode))
+                                                                    .Select(x => x.MealImage)
+                                                                    .FirstOrDefault();
+
+
+                                                                    if (Mealcode != null)
                                                                     {
-                                                                        foreach (var item in meal)
-                                                                        {
-                                                                            <td>@item.MealImage</td>
-                                                                        }
+
+                                                                        <td>@Mealcode-@MealName</td>
+
                                                                     }
-                                                                    // <td>@htmeal[hashdata]</td>
+
                                                                 }
                                                                 else
                                                                 {
-                                                                    <td></td>
+                                                                    <td>NA</td>
                                                                 }
+
+
+
+                                                                string hashBagdata = Model.AirlinePNR[a].passengers[i2].passengerKey + "_" + Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
+                                                                if (htbag != null && htbag.ContainsKey(hashBagdata))
+                                                                {
+
+                                                                    var Baggagecode = htbag[hashBagdata].ToString();
+
+                                                                    var Baggagename = MealImageList.GetAllmeal()
+                                                                    .Where(x => Baggagecode.Contains(x.MealCode))
+                                                                    .Select(x => x.MealImage)
+                                                                    .FirstOrDefault();
+                                                                  
+                                                                    if (Baggagecode != null)
+                                                                    {
+                                                                       
+                                                                       <td>@Baggagename</td>
+                                                                       
+                                                                    }
+                                                                }
+                                                                else
+                                                                {
+                                                                    <td>NA</td>
+                                                                }
+
+                                                               
+
+
+
                                                                 // string hashBagdata = @Model.AirlinePNR[0].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.destination;
                                                                 // if (htbag != null)
                                                                 // {
                                                                 //     <td>@htbag[hashBagdata]</td>
                                                                 // }
-                                                                string hashBagdata = Model.AirlinePNR[a].passengers[i2].passengerKey + "_" + Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
-                                                                if (htbag != null && htbag.ContainsKey(hashBagdata))
-                                                                {
-
-                                                                    var Baggabgename = htbag[hashBagdata].ToString();
-                                                                    var Baggage = MealImageList.GetAllmeal().Where(x => Baggabgename.Contains(x.MealCode)).ToList();
-                                                                    if (Baggage != null)
-                                                                    {
-                                                                        foreach (var item in Baggage)
-                                                                        {
-                                                                            <td>@item.MealImage</td>
-                                                                        }
-                                                                    }
-                                                                }
-                                                                else
-                                                                {
-                                                                    <td></td>
-                                                                }
+                                                               
 
                                                             }
                                                             @{
