--- a/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
@@ -736,15 +736,15 @@
                                                         // }
 
 
-                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.total > 0)
+                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.totalSeatAmount > 0)
                                                         {
                                                             <tr>
                                                                 <td>Seat Amount:</td>
-                                                                <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.seats.total</td>
+                                                                <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.seats.totalSeatAmount</td>
                                                             </tr>
                                                         }
 
-                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.total == 0)
+                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.totalSeatAmount == 0)
                                                         {
                                                             if (@Model.AirlinePNR[a].Seatdata.Count == 0)
                                                             {
