--- a/CoporateBooking/Views/CommitBooking/booking.cshtml
+++ b/CoporateBooking/Views/CommitBooking/booking.cshtml
@@ -481,7 +481,7 @@
                                     <tr>
                                         <th rowspan="2" class="align-middle">Passenger</th>
                                         <th colspan="2" class="text-center">Fllight Detail</th>
-                                        <th rowspan="2" class="align-middle">Meal Type</th>
+                                        <th rowspan="2" class="align-middle">Meal</th>
                                         <th rowspan="2" class="align-middle">Extra Bag(Kg)</th>
                                         <th rowspan="2" class="align-middle">Insurance Status</th>
                                     </tr>
@@ -518,7 +518,8 @@
                                                     // }
                                                 }
                                                 <td>@Model.AirlinePNR[0].journeys[0].segments[i3].designator.origin - @Model.AirlinePNR[0].journeys[0].segments[i3].designator.destination </td>
-                                                <td>@Model.AirlinePNR[0].journeys[0].segments[i3].identifier.carrierCode - @Model.AirlinePNR[0].journeys[0].segments[i3].identifier.identifier</td>
+                                                <td colspan="1">@Model.AirlinePNR[0].journeys[0].segments[i3].identifier.carrierCode - @Model.AirlinePNR[0].journeys[0].segments[i3].identifier.identifier</td>
+
 
                                                 @{
                                                     string hashdata = @Model.AirlinePNR[0].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.destination;
@@ -527,22 +528,27 @@
                                                     {
 
                                                         var Mealcode = htmeal[hashdata].ToString();
-                                                        var meal = MealImageList.GetAllmeal().Where(x => Mealcode.Contains(x.MealCode)).ToList();
-                                                        // var meal = MealImageList.GetAllmeal().Where(x => mealcode.Contains(x.MealCode)).ToList();
-                                                        if (meal != null)
+
+                                                        var MealName = MealImageList.GetAllmeal()
+                                                        .Where(x => Mealcode.Contains(x.MealCode))
+                                                        .Select(x => x.MealImage)
+                                                        .FirstOrDefault();
+
+
+                                                        if (Mealcode != null)
                                                         {
-                                                            foreach (var item in meal)
-                                                            {
-                                                                <td>@item.MealCode</td>
-                                                                //THIS IS FOR MEAL
-                                                                // <td>@item.MealImage</td>
-                                                            }
+
+                                                            <td>@Mealcode-@MealName</td>
+
                                                         }
-                                                        // <td>@htmeal[hashdata]</td>
+
+
+
+
                                                     }
                                                     else
                                                     {
-                                                        <td></td>
+                                                        <td>NA</td>
                                                     }
                                                     // string hashBagdata = @Model.AirlinePNR[0].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.destination;
                                                     // if (htbag != null)
@@ -553,34 +559,56 @@
                                                     if (htbag != null && htbag.ContainsKey(hashBagdata))
                                                     {
 
-                                                        var Baggabgename = htbag[hashBagdata].ToString();
-                                                        var Baggage = MealImageList.GetAllmeal().Where(x => Baggabgename.Contains(x.MealCode)).ToList();
-                                                        if (Baggage != null)
-                                                        {
-                                                            foreach (var item in Baggage)
-                                                            {
-                                                                // <td>@item.MealImage</td>
-                                                                if (i3 == 0)
-                                                                {
+                                                        var Baggabgecode = htbag[hashBagdata].ToString();
 
-                                                                    <td>@item.MealImage</td>
-                                                                }
-                                                                else
-                                                                {
-                                                                    <td></td>
-                                                                }
-                                                                //THIS IS FOR BAGGAGE.
+                                                        var BaggageName = MealImageList.GetAllmeal()
+                                                        .Where(x => Baggabgecode.Contains(x.MealCode))
+                                                        .Select(x => x.MealImage)
+                                                        .FirstOrDefault();
+
+                                                        if (Baggabgecode != null)
+                                                        {
+
+                                                            if (i3 == 0)
+                                                            {
+
+                                                                <td>@BaggageName</td>
                                                             }
+
+
+
+
                                                         }
+
+
+
+
+
+
+                                                        // var Baggabgename = htbag[hashBagdata].ToString();
+                                                        // var Baggage = MealImageList.GetAllmeal().Where(x => Baggabgename.Contains(x.MealCode)).ToList();
+                                                        // if (Baggage != null)
+                                                        // {
+                                                        //     foreach (var item in Baggage)
+                                                        //     {
+                                                        //         // <td>@item.MealImage</td>
+                                                        //         if (i3 == 0)
+                                                        //         {
+
+                                                        //             <td>@item.MealImage</td>
+                                                        //         }
+
+                                                        //     }
+                                                        // }
                                                     }
                                                     else
                                                     {
-                                                        <td></td>
+                                                        <td>NA</td>
                                                     }
 
                                                 }
 
-                                                <td>Confirm</td>
+                                                <td>NA</td>
                                             </tr>
                                         }
                                     }
@@ -675,6 +703,28 @@
                                             </tr>
                                         }
 
+                                        if (@Model.AirlinePNR[0].TotalAmountMeal == 0)
+                                        {
+                                            if (@Model.AirlinePNR[0].TotalAmountMeal == 0)
+                                            {
+                                                <tr style="display: none;">
+                                                    <td>Addon Meal Amount:</td>
+                                                    <td>-</td>
+                                                </tr>
+                                            }
+                                            else
+                                            {
+                                                <tr>
+                                                    <td>Addon Meal Amount:</td>
+                                                    <td>Free</td>
+                                                </tr>
+                                            }
+
+
+                                        }
+
+
+
                                         if (@Model.AirlinePNR[0].TotaAmountBaggage > 0)
                                         {
 
@@ -684,6 +734,29 @@
                                             </tr>
 
                                         }
+
+                                        if (@Model.AirlinePNR[0].TotaAmountBaggage == 0)
+                                        {
+                                            if (@Model.AirlinePNR[0].TotaAmountBaggage == 0)
+                                            {
+                                                <tr style="display: none;">
+                                                    <td>Addon Bagg Amount:</td>
+                                                    <td>-</td>
+                                                </tr>
+                                            }
+                                            else
+                                            {
+                                                <tr>
+                                                    <td>Addon Bagg Amount:</td>
+                                                    <td>Free</td>
+                                                </tr>
+                                            }
+
+
+                                        }
+
+
+
                                         if (@Model.AirlinePNR[0].breakdown.passengerTotals.seats.totalSeatAmount > 0)
                                         {
                                             <tr>
@@ -692,6 +765,26 @@
                                             </tr>
                                         }
 
+
+                                        if (@Model.AirlinePNR[0].breakdown.passengerTotals.seats.totalSeatAmount == 0)
+                                        {
+                                            if (@Model.AirlinePNR[0].breakdown.passengerTotals.seats.totalSeatAmount == 0)
+                                            {
+                                                <tr style="display: none;">
+                                                    <td>Seat Amount:</td>
+                                                    <td>-</td>
+                                                </tr>
+                                            }
+                                            else
+                                            {
+                                                <tr>
+                                                    <td>Seat Amount:</td>
+                                                    <td>Free</td>
+                                                </tr>
+                                            }
+
+
+                                        }
                                     }
 
                                     <tr style="background:#FCE1E1;">
@@ -801,14 +894,3 @@
     }
 
 </script>
-
-
-
-
-
-
-
-
-
-
-
