--- a/CoporateBooking/Views/AATripsell/Tripsell.cshtml
+++ b/CoporateBooking/Views/AATripsell/Tripsell.cshtml
@@ -18,9 +18,10 @@
     <link rel="icon" href="~/img/favicon.png">
     <!-- Style css -->
     <link rel="stylesheet" href="~/css/vendors.css">
-    <link rel="stylesheet" href="~/css/main.css" />
+  <link rel="stylesheet" href="~/css/main.css" />
     <link rel="stylesheet" href="~/css/style.css">
-    <link rel="stylesheet" href="~/css/daterangepicker.css">
+    <link rel="stylesheet" href="~/css/daterangepicker.css"> 
+    <link rel="stylesheet" href="/css/style.min.css" />
     <script src="~/js/app.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
