--- a/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
@@ -997,7 +997,7 @@
                                                             @{
 
 
-                                                               string hashdataMeal = @Model.AirlinePNR[0].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[0].journeys[0].segments[i3].designator.destination;
+                                                               string hashdataMeal = @Model.AirlinePNR[a].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
 
                                                                 if (hashdataMeal != null && htmeal.ContainsKey(hashdataMeal))
                                                                 {
@@ -1022,7 +1022,6 @@
                                                                 {
                                                                     <td>NA</td>
                                                                 }
-
 
 
                                                                 string hashBagdata = Model.AirlinePNR[a].passengers[i2].passengerKey + "_" + Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
@@ -1140,12 +1139,23 @@
                                                                 <td>Rs.@Model.AirlinePNR[a].TotalAmountMeal</td>
                                                             </tr>
                                                         }
-                                                        else
+
+                                                        if (@Model.AirlinePNR[a].TotalAmountMeal == 0)
                                                         {
-                                                            <tr>
-                                                                <td>Addon Meal Amount:</td>
-                                                                <td>Free</td>
-                                                            </tr>
+                                                            if (@Model.AirlinePNR[a].Mealdata.Count == 0)
+                                                            {
+                                                                <tr style="display: none;">
+                                                                    <td>Addon Meal Amount:</td>
+                                                                    <td>-</td>
+                                                                </tr>
+                                                            }
+                                                            else
+                                                            {
+                                                                <tr>
+                                                                    <td>Addon Meal Amount:</td>
+                                                                    <td>Free</td>
+                                                                </tr>
+                                                            }
                                                         }
                                                         if (@Model.AirlinePNR[a].TotaAmountBaggage > 0)
                                                         {
@@ -1155,12 +1165,22 @@
                                                             </tr>
 
                                                         }
-                                                        else
+                                                        if (@Model.AirlinePNR[a].TotaAmountBaggage == 0)
                                                         {
-                                                            <tr>
-                                                                <td>Addon Bagg Amount:</td>
-                                                                <td>Free</td>
-                                                            </tr>
+                                                            if (@Model.AirlinePNR[a].TotaAmountBaggage == 0)
+                                                            {
+                                                                <tr style="display: none;">
+                                                                    <td>Addon Bag Amount:</td>
+                                                                    <td>-</td>
+                                                                </tr>
+                                                            }
+                                                            else
+                                                            {
+                                                                <tr>
+                                                                    <td>Addon Bag Amount:</td>
+                                                                    <td>Free</td>
+                                                                </tr>
+                                                            }
                                                         }
                                                         if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.totalSeatAmount > 0)
                                                         {
@@ -1169,12 +1189,25 @@
                                                                 <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.seats.totalSeatAmount</td>
                                                             </tr>
                                                         }
-                                                        else
+
+                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.totalSeatAmount == 0)
                                                         {
-                                                            <tr>
-                                                                <td>Seat Amount:</td>
-                                                                <td>Free</td>
-                                                            </tr>
+                                                            if (@Model.AirlinePNR[a].Seatdata.Count == 0)
+                                                            {
+                                                                <tr style="display: none;">
+                                                                    <td>Seat Amount:</td>
+                                                                    <td>-</td>
+                                                                </tr>
+                                                            }
+                                                            else
+                                                            {
+                                                                <tr>
+                                                                    <td>Seat Amount:</td>
+                                                                    <td>Free</td>
+                                                                </tr>
+                                                            }
+
+
                                                         }
 
                                                     }
