coprate booking change '21-02-2025'

--- a/CoporateBooking/Views/AKTripsell/_AKContactDetailsPartialView.cshtml
+++ b/CoporateBooking/Views/AKTripsell/_AKContactDetailsPartialView.cshtml
@@ -335,9 +335,7 @@
                 // GST Email Validation
                 let gstemailfocus = document.getElementById("emailAddressGST").value;
 
-                //var emailRegex = /^(?!.*\.\.)[^\s@@]+@@[^\s@@]+\.[^\s@@]+$/;
-                //var emailRegex = /^[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$/;
-                var emailRegex = /^[a-zA-Z0-9._%+-]+[^\.]@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$/;
+                var emailRegex = /^\w+([\.-]?\w+)*@@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
                 if (gstemailfocus == "") {
 
                 } else if (!emailRegex.test(gstemailfocus)) {
