--- a/OnionConsumeWebAPI/Views/AKTripsell/_AkServiceRequestsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AKTripsell/_AkServiceRequestsPartialView.cshtml
@@ -576,7 +576,7 @@
                                                             {
                                                                 string ssrprice = Model.AkMealslist.legSsrs[0].legssrs[s].legpassengers[0].price;
                                                                 string Mealcode = Model.AkMealslist.legSsrs[0].legssrs[s].ssrCode;
-                                                                Mealname = Mealcode + "-" + Model.AkMealslist.legSsrs[0].legssrs[s].name + " ₹" + @Model.AkMealslist.legSsrs[0].legssrs[s].legpassengers[0].price + "_" + Model.AkMealslist.legSsrs[0].legssrs[s].ssrCode;
+                                                                Mealname = Mealcode + "-" + Model.AkMealslist.legSsrs[0].legssrs[s].name + " ₹" + @Model.AkMealslist.legSsrs[0].legssrs[s].legpassengers[0].price;// + "_" + Model.AkMealslist.legSsrs[0].legssrs[s].ssrCode;
                                                                 ssrkey = Model.AkMealslist.legSsrs[0].legssrs[s].legpassengers[pa].ssrKey + "_" + @Model.AkMealslist.legSsrs[0].legssrs[s].legpassengers[0].price;
                                                                 string passengerKey = Model.AkMealslist.legSsrs[0].legssrs[s].legpassengers[pa].passengerKey;
 
