seat meal akasa round trip '24-02-2025'

--- a/OnionConsumeWebAPI/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
@@ -306,7 +306,7 @@
                                             }
                                             else
                                             {
-                                                @if (Model.SimpleAvailibilityaAddResponcelist[j].segments[0].legs.Count == 2)
+                                                @if (Model.SimpleAvailibilityaAddResponcelist[j].segments[0].legs.Count >= 2)
                                                 {
                                                     <div class="mt-1"> @Model.SimpleAvailibilityaAddResponcelist[j].segments[0].legs[0].designator.destination,@Model.SimpleAvailibilityaAddResponcelist[j].segments[0].legs[1].designator.destination </div>
 
