--- a/OnionConsumeWebAPI/Views/RoundTrip/_RTFlightResultsSortingPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTrip/_RTFlightResultsSortingPartialView.cshtml
@@ -187,7 +187,7 @@
                                             @if (Model.SimpleAvailibilityaAddResponcelist[j].segments.Count == 3)
                                             {
                                                 <div class="mt-1 r-stop">@stops Stop via @Model.SimpleAvailibilityaAddResponcelist[j].segments[0].legs[0].designator.destination,@Model.SimpleAvailibilityaAddResponcelist[j].segments[1].legs[0].designator.destination </div>
-
+                                                
                                             }
                                             else if (Model.SimpleAvailibilityaAddResponcelist[j].segments.Count == 2)
                                             {
@@ -1016,7 +1016,7 @@
                                         <div class="d-flex justify-center align-items-center">
                                             <div>@stops Stop via &nbsp;</div>
 
-                                            @if (Model.SimpleAvailibilityaAddResponcelistR[j].segments[0].legs.Count == 2)
+                                            @if (Model.SimpleAvailibilityaAddResponcelistR[j].segments[0].legs.Count >= 2)
                                             {
                                                 <div class="mt-1">@Model.SimpleAvailibilityaAddResponcelistR[j].segments[0].legs[0].designator.destination  ,@Model.SimpleAvailibilityaAddResponcelistR[j].segments[0].legs[1].designator.destination</div>
                                             }
